fixed api auth
